...
        android:layout_marginBottom="232dp"
        android:text="@string/main_all_tasks_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/mainActivityNicknameTextView"
        android:layout_width="261dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:text="@string/main_textView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/mainActivitySettingsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/settings_button_description"
        app:layout_constraintEnd_toEndOf="parent"
...
